  * Add halt polling tuning: 50μs (balanced), 100μs (extreme) for lower vCPU wake-up latency
  * Add comprehensive RT configuration documentation (21 optimization steps)
  * Add experimental tuning guide for advanced BIOS and host configuration
  * Add geoik-velctrl package recipe for geometric IK-based velocity control server
  * Add franky-fer and franky-gen1 package recipes for high-level Franka robot control
  * Add ur_rtde package recipe for Universal Robots RTDE interface (C++ and Python)
  * Auto-start VM in 'servobox run' and `servobox test` if VM is shut down
  * Default mode is "balanced" (~4μs avg, ~100μs max, recommended for all users)
  * Improve pkg-install --custom handling for external single-recipe directories
  * Fix false circular dependency detection when using custom recipe directories

 -- Konstantinos Vasios <konstantinos.vasios@gmail.com>  Sat, 16 Nov 2025 00:00:00 +0000

servobox (0.1.3) unstable; urgency=medium

  * Fix critical network setup boot delays - VMs now boot in 5-10s instead of 30-60s
  * Add optional: true to macvtap NIC netplan configs to prevent boot blocking
  * Implement first-boot flag to skip expensive cloud-init operations on subsequent boots
  * Add systemd service (servobox-configure-macvtap.service) for reliable macvtap configuration
  * Fix VM IP assignment to avoid conflicts between host and VM in same subnet
  * Upgrade to virtio-net with multi-queue + vhost-net RT priority (75)
  * Remove guest CPU isolation restrictions - guest processes can use all vCPUs freely
  * Add timeouts to virsh commands and improve error handling
  * Fix hanging operations with non-interactive sudo and clear error messages

 -- Konstantinos Vasios <konstantinos.vasios@gmail.com>  Thu, 07 Nov 2025 12:00:00 +0000

servobox (0.1.2) unstable; urgency=medium

  * Fix critical VM detection issue after closing/reopening terminal
  * Fix "Permission denied" errors when creating seed.iso in new terminals