@@ -1,0 +1,7 @@
+# Franky Remote for Franka Research 3 package recipe
+name="franky-remote-fr3"
+version="1.0.0"
+description="Franky Remote - Remote Control for Franka Research 3"
+build_type="custom"
+install_method="custom"
+dependencies="franky-fr3"
