@@ -1,0 +1,8 @@
+# Franky Remote for Franka Panda Gen1 package recipe
+name="franky-remote-gen1"
+version="1.0.0"
+description="Franky Remote - Remote Control for Franka Panda Gen1"
+build_type="custom"
+install_method="custom"
+dependencies="franky-gen1"
+
